# agents-at-scale-ark

./: .all-contributorsrc  CVE-2026-0994.md  devspace.yaml
.claude-plugin/: marketplace.json
.claude/skills/documentation/: SKILL.md
.github/: CHANGELOG.md  dependabot.yaml  release-please-config.json  release-please-manifest.json
.github/actions/deploy-additional-services/: action.yml
.github/actions/jfrog-xray-scan/: tolerated_violations.txt
.github/actions/test-ark-cli/: action.yaml
.github/workflows/: cicd.yaml  deploy.yml  deploy_aws.yml  deploy_gcp.yml
ark/api/v1alpha1/: agent_types.go
ark/cmd/: main.go
ark/config/certmanager/: certificate-metrics.yaml
ark/config/default/: manager_metrics_patch.yaml
ark/config/manager/: manager.yaml
ark/config/prometheus/: kustomization.yaml  monitor.yaml  monitor_test.go  monitor_tls_patch.yaml
ark/config/rbac/: kustomization.yaml  metrics_service.yaml
ark/internal/controller/: a2aserver_controller.go  mcpserver_controller.go  model_controller.go  query_controller.go  query_controller_telemetry_test.go
ark/internal/genai/: a2a.go  agent_tools.go  agent_tools_test.go  mcp.go  memory_http.go  model_generic.go  model_probe.go  provider_azure.go  provider_bedrock.go  provider_healthcheck_test.go  provider_openai.go  tools.go
ark/internal/telemetry/: recorders.go
charts/ark-tenant/: Chart.yaml
docs/: package-lock.json  package.json
docs/content/: index.mdx
docs/content/developer-guide/: _meta.js  ark-evaluator.mdx  form-validation-standards.mdx  langchain-execution-engine.mdx  services.mdx  testing.mdx
docs/content/how-to-guides/: _meta.js  index.mdx
docs/content/operations-guide/: penetration-testing-reports.mdx
docs/content/reference/: relationships.mdx  upgrading.mdx
docs/content/user-guide/: _meta.js  files.mdx  models.mdx
docs/public/: contributors.html
lib/ark-sdk/: pyproject.toml
samples/agents/: json-output-agent.yaml  partial-tool-calling.yaml
services/ark-api/ark-api/: pyproject.toml
services/ark-api/ark-api/src/ark_api/api/v1/: __init__.py  broker.py  openai.py  proxy.py
services/ark-api/ark-api/src/ark_api/models/: agents.py  mcp_servers.py
services/ark-api/ark-api/tests/: test_proxy.py
services/ark-api/ark-api/tests/api/: test_broker.py
services/ark-broker/: Makefile  README.md  build.mk  devspace.yaml  package-lock.json
services/ark-dashboard/: Dockerfile
services/ark-evaluator/: Dockerfile  pyproject.toml
services/ark-evaluator/chart/: Chart.yaml
tests/a2a-agent-discovery/: chainsaw-test.yaml  mock-llm-values.yaml
tests/a2a-blocking-task-completed/: chainsaw-test.yaml  mock-llm-values.yaml
tests/a2a-blocking-task-failed/: chainsaw-test.yaml  mock-llm-values.yaml
tests/a2a-message-context/: chainsaw-test.yaml  mock-llm-values.yaml
tests/a2a-message-query/: chainsaw-test.yaml  mock-llm-values.yaml
tests/agent-overrides/: chainsaw-test.yaml  mock-llm-values.yaml
tests/agent-partial-tool/: chainsaw-test.yaml  mock-llm-values.yaml
tests/agent-partial-tool-invalid/: chainsaw-test.yaml  mock-llm-values.yaml
tests/agent-partial-tool-valuefrom/: chainsaw-test.yaml  mock-llm-values.yaml
tests/agent-tools/: chainsaw-test.yaml  mock-llm-values.yaml
tests/mcp-discovery/: chainsaw-test.yaml  mock-llm-values.yaml
tests/model-custom-headers/: chainsaw-test.yaml  mock-llm-values.yaml
tests/prometheus-tls-config/: README.md  chainsaw-test.yaml
tests/query-overrides/: chainsaw-test.yaml  mock-llm-values.yaml
tests/query-parameter-ref/: chainsaw-test.yaml  mock-llm-values.yaml
tests/query-token-usage/: chainsaw-test.yaml  mock-llm-values.yaml
tests/query-tool-target/: chainsaw-test.yaml
tests/shared/: README.md  mock-geocoding-api.yaml  mock-weather-api.yaml
tests/team-round-robin/: chainsaw-test.yaml
tests/team-sequential/: chainsaw-test.yaml  mock-llm-values.yaml
tests/tool-type-deprecation-warning/: chainsaw-test.yaml  mock-llm-values.yaml
tools/ark-cli/: package-lock.json  package.json
tools/ark-cli/src/: index.tsx  (+2 more)
(+193 files in other folders)
